--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -11,3 +11,13 @@
   margin-bottom: 0.5em;
   text-align: center;
 }
+
+.header {
+  text-align: center;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+}
+
+.header__lower {
+  font-size: 1em
+}
