--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,3 +1,8 @@
+body {
+  font-family: 'Poiret One', cursive;
+  font-size 1.6em
+}
+
 .form__button--submit {
   width: 15%;
   display: block;
@@ -23,13 +28,18 @@
 }
 
 .total {
-  text-align: center
+  text-align: center;
+  font-size: 1.5em;
+  font-weight: bolder;
+  color: white;
+  background-color: #337ab7
 }
 
 #task {
   width: 100%;
   margin-bottom: 0.5em;
   text-align: center;
+  font-size: 1.4em;
 }
 
 .header {
@@ -39,11 +49,20 @@
 }
 
 .header__lower {
-  font-size: 1em
+  font-size: 1.5em
 }
 
 .strikethrough {
   text-decoration: line-through;
 }
 
-.
+.tasks {
+  border-color: aqua;
+  font-size: 1.7em;
+
+}
+
+h1 {
+  font-size: 3em;
+  font-weight: bolder;
+}
